--- a/HomeWork20/IsolatedScope/index.html
+++ b/HomeWork20/IsolatedScope/index.html
@@ -8,8 +8,12 @@
 
 <body ng-app="app">
     <div id='div1' ng-controller="message">
-        controller: a={{a}} b={{b}} p={{p}} q={{q}}<br> Directive 1:
-        <div message x="hi", y="hari"></div>
+        controller: a={{a}} b={{b}} p={{p}} q={{q}}<br> 
+      ------------------------------------------------------<br>
+     directive 1 instance 1:   <div message x="hi", y="hari"></div>
+      directive 1 instance 2:   <div message x={{p}}, y={{q}}></div>
+        ------------------------------------------------------<br>
+      directive 2 instance 1:   <div message2 m={{p}}, n={{q}}></div>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
