--- a/HomeWork20/IsolatedScope=/index.html
+++ b/HomeWork20/IsolatedScope=/index.html
@@ -12,7 +12,7 @@
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
-    <script src="controllers.js"></script>
+    <script src="script.js"></script>
 
 </body>
 
