--- a/HomeWork25/UI-ROUTER/app/index.html
+++ b/HomeWork25/UI-ROUTER/app/index.html
@@ -17,13 +17,14 @@
   <!-- endbuild -->
 </head>
 
-<body ng-app="uiRouterApp">
+<body ng-app="uiRouterApp" >
+
   <!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
   <!-- Add your site or application content here -->
-  <div class="header">
+  <div class="header" >
     <div class="navbar navbar-default" role="navigation">
       <div class="container">
         <div class="navbar-header">
@@ -41,9 +42,9 @@
         <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
           <ul class="nav navbar-nav">
-             <li><a ui-sref="home">Home</a></li>
-        <li><a ui-sref="about">About</a></li>
-            
+            <li><a ui-sref="home">Home</a></li>
+            <li><a ui-sref="about">About</a></li>
+
           </ul>
         </div>
       </div>
@@ -85,13 +86,16 @@
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
   <script src="bower_components/angular-touch/angular-touch.js"></script>
+  
   <!-- endbower -->
   <!-- endbuild -->
 
   <!-- build:js({.tmp,app}) scripts/scripts.js -->
+  <script src="js/angular-ui-router.min.js"></script> 
   <script src="scripts/app.js"></script>
   <script src="scripts/controllers/main.js"></script>
   <script src="scripts/controllers/about.js"></script>
+   <script src="scripts/controllers/home.js"></script>
   <!-- endbuild -->
 </body>
 
