--- a/HomeWork25/final/app/index.html
+++ b/HomeWork25/final/app/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
   </head>
-  <body ng-app="uiRouterApp">
+  <body ng-app="finalApp">
     <!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -33,7 +33,7 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">uiRouter</a>
+            <a class="navbar-brand" href="#/">final</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
@@ -49,7 +49,7 @@
     </div>
 
     <div class="container">
-    <div ng-view=""></div>
+    <div ui-view></div> 
     </div>
 
     <div class="footer">
