--- a/HomeWork25/final/app/index.html
+++ b/HomeWork25/final/app/index.html
@@ -49,12 +49,13 @@
         <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
           <ul class="nav navbar-nav">
-            <li class="active"><a ui-sref="main">Home</a></li>
-            <li><a ui-sref="about">About</a></li>
-            <li><a ui-sref="">Contact</a></li>
+            <li ui-sref-active="active"><a ui-sref="home">Home</a></li>
+            <li ui-sref-active="active"><a ui-sref="about">About</a></li>
+            <li ui-sref-active="active"><a ui-sref="contact">Contact</a></li>
+          </ul>
 
           </ul>
-          <div ui-view></div>
+         
         </div>
       </div>
     </div>
@@ -106,7 +107,7 @@
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
   <script src="bower_components/angular-touch/angular-touch.js"></script>
-   <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+  <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
 
